# DP

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  bddcalculatie  cmake_install.cmake  mapcheck.sh  mixedmap.sh  piSat  script.sh  test  test.cpp
examples/: README.txt  test.cnf  test2.cnf
src/: main.cpp
src/DP/: DP.cpp  DP.h  DPBDD.cpp  DPBDD.h  DPcombined.cpp  DPlits.cpp  DPlits.h  DPniek.cpp  DPpointers.cpp
src/DPLL/: DPLL.cpp  DPLL.h
src/structures/: CNF.cpp  CNF.h  Clause.cpp  Clause.h  ClauseNiek.cpp  ClausePointers.cpp  Literal.h  Variable.cpp  Variable.h
src/util/: parsefile.cpp  parsefile.h  util.cpp  util.h
sylvan/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
sylvan/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sylvan_bdd.c  sylvan_mtbdd.c
sylvan/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_basic  test_cxx
